Bug 466931 - Custom Message Aggregation Modes are not shown in Message List preferences until restart
Summary: Custom Message Aggregation Modes are not shown in Message List preferences un...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 5.22.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-06 10:26 UTC by Raphael Kubo da Costa
Modified: 2023-03-07 05:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raphael Kubo da Costa 2023-03-06 10:26:50 UTC
If I go to Settings -> Appearance -> Message List -> Default aggregation -> Configure and add a new Aggregation Mode with any name and settings, it is not shown in the Default aggregation combobox until KMail is restarted.
Comment 1 Laurent Montel 2023-03-06 14:22:01 UTC
Oh ! 
I will investigate it this night or tomorrow morning.
Thanks for bug report
Comment 2 Laurent Montel 2023-03-06 21:10:37 UTC
Git commit cb41513c0f76181caed92bf868766c4397e8a53a by Laurent Montel.
Committed on 06/03/2023 at 21:10.
Pushed by mlaurent into branch 'master'.

Fix 466931: Custom Message Aggregation Modes are not shown in Message List preferences until restart
FIXED-IN: 5.23.0

M  +1    -1    messagelist/src/utils/configureaggregationsdialog.cpp
M  +1    -1    messagelist/src/utils/configurethemesdialog.cpp

https://invent.kde.org/pim/messagelib/commit/cb41513c0f76181caed92bf868766c4397e8a53a
Comment 3 Raphael Kubo da Costa 2023-03-06 21:25:04 UTC
Thanks for the fix! Do you plan on backporting it?
Comment 4 Laurent Montel 2023-03-07 05:49:02 UTC
nope as there is not new 22.12.x