Fix 466931: Custom Message Aggregation Modes are not shown in Message List preferences until restart

BUG: 466931
FIXED-IN: 5.23.0