messagelist/src/utils/configurethemesdialog.cpp
@@ -205,7 +205,7 @@ void ConfigureThemesDialog::ConfigureThemesDialogPrivate::okButtonClicked()
 
     Manager::instance()->themesConfigurationCompleted();
     Q_EMIT q->okClicked();
-    q->close(); // this will delete too
+    q->accept(); // this will delete too
 }
 
 void ConfigureThemesDialog::ConfigureThemesDialogPrivate::commitEditor()
